# ecqr2025sub-bc

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py
.cursor/: env.mdc  general-python-coding-best-practices.mdc  pet_peeves.mdc
.cursor/skills/test-writer/: SKILL.md
.cursor/skills/variant-benchmarker/: SKILL.md
hpobench/: optuna_gp_integration.py  plot.py  prepare.py  process.py  syne_tune_integration.py  tune.py  utils.py
hpobench/config/: benchmark_data.py  config_types.py  constants.py  schema.py  tuner_configurations.py  utils.py
hpobench/generation/: black_box_functions.py  generate.py
hpobench/gp_opt/: __init__.py  acquisition_functions.py  surrogate.py  tuning.py  wrapping.py
hpobench/gp_opt/utils/: preprocessing.py  tracking.py
hpobench/gp_opt/utils/configurations/: encoding.py  sampling.py
hpobench/report/: analyze.py  latex.py  metrics.py  orchestrate.py  utils.py
snippets/: create_runtime_stratification.py  create_stratification_boxplots.py  create_surrogate_heteroscedasticity_stratification.py  create_surrogate_skewness_stratification.py  optuna_gp.py  plot_utils.py  setup_env.ps1  setup_jahs_surrogates.bat  stratification_utils.py
snippets/legacy/: create_size_stratification.py
tests/: conftest.py  test_generate.py  test_metrics.py  test_prepare.py  test_tune.py  test_utils.py
tests/spot_checks/analysis/: test_main_analysis.py  toy_raw_benchmark_data.csv
tests/spot_checks/processing/: test_benchmark_data_processor_spot_checks.py
(+19 files in other folders)
