[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpobench"
version = "0.0.1"
description = "Benchmark of hyperparameter optimization algorithms"
readme = "README.md"
authors = [
    {name = "anonymous", email = "anonymous@gmail.com"}
]
requires-python = "<3.11"
license = {text = "Apache License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "setuptools>=45,<71",
    "pandas==1.3.5",
    "matplotlib==3.10.3",
    "scikit-learn==1.0.2",
    "numpy==1.26.4",
    "joblib==1.1.1",
    "cmaes==0.11.1",

    "yahpo_gym==1.0.2",
    "huggingface-hub==0.33.4",
    "jahs-bench==1.1.0",
    "scikit-posthocs==0.11.4",
    "statsmodels==0.14.1",

    "ConfigSpace==0.4.21",
    "onnxruntime==1.16.3",
    "torch==2.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "autoflake",
    "pytest-xdist"
]

[project.urls]
Homepage = "https://github.com/researchingotter1324/ecqr2025sub-bc"

[tool.setuptools]
packages = { find = { where = ["."] , include = ["hpobench*"] } }
include-package-data = true
